--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gsap/react": "^2.1.1",
+    "@next/font": "^14.2.3",
+    "@remixicon/react": "^4.2.0",
+    "gsap": "^3.12.5",
+    "lenis": "^1.0.45",
+    "locomotive-scroll": "^5.0.0-beta.12",
+    "lottie-web": "^5.12.2",
+    "next": "14.2.3",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "remixicon": "^4.2.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
