--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "@next/font": "^14.2.3",
     "@remixicon/react": "^4.2.0",
+    "audio-player": "^1.1.0",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
     "locomotive-scroll": "^5.0.0-beta.12",
@@ -22,7 +23,9 @@
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18",
-    "remixicon": "^4.2.0"
+    "react-h5-audio-player": "^3.9.1",
+    "remixicon": "^4.2.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
