--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^14.2.3",
     "@remixicon/react": "^4.2.0",
     "audio-player": "^1.1.0",
+    "bodymovin": "^4.13.0",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
     "locomotive-scroll": "^5.0.0-beta.12",
